less/modules/index-landing.less
/* ... */
@media only screen and (max-width: 768px) and (min-height: 800px) {
  .landing-logo {left: 40px;}
  .landing-navbar-wrapper {right: 40px;}
  .landing-bottom-left {left: 40px; bottom: 24px;}
  .landing-bottom-right {right: 40px; bottom: 24px;}

  .margin-container {margin:0px 80px 0px 80px;}

  .margintop-landing-intro {margin-top: 30vh;}
  .landing-intro-title {font-size: 8vw;}
  .landing-intro-text {font-size: 13pt;}
  .landing-intro-text-2, .landing-intro-text-3 {font-size: 15pt;}


  .landing-bottom-right:hover {
    position: absolute;
    bottom: 23px;
    right: 36px;
    -webkit-transform: translate(0px, -15px);
       -moz-transform: translate(0px, -15px);
        -ms-transform: translate(0px, -15px);
         -o-transform: translate(0px, -15px);
            transform: translate(0px, -15px);
      color: @white-color;
      background: @secondary-color;
      font-size: 22px;
      padding: 22px 42px;
      box-shadow: 0px 0px 50px #454545;
  }

  .landing-bottom-right:active {
    position: absolute;
    bottom: 24px;
    right: 40px;
    -webkit-transform: translate(0px, -15px);
       -moz-transform: translate(0px, -15px);
        -ms-transform: translate(0px, -15px);
         -o-transform: translate(0px, -15px);
            transform: translate(0px, -15px);
    -webkit-transition: 50ms ease-in-out;
            transition: 50ms ease-in-out;
      color: @white-color;
      background: @secondary-color;
      font-size: 21px;
      padding: 20px 40px;
      box-shadow: none;
  }
}

// =====================================================================

@media only screen and (max-width: 768px) and (min-width: 501px) {
  .margintop-landing-intro {margin-top: 25vh;}
}

// =====================================================================

// Mobil
@media only screen and (max-width: 500px) {

  .bg-landing {
    position: fixed;
  }

  .landing-logo {
    left: 20px;

    a {

      img {
        width: 120px!important;
      }
    }
  }
  .margintop-landing-logo {margin-top: 20px;}
  .margintop-landing-logo-sub {margin-top: 19px;}
  .landing-wcag-textsize {display: none;}
  .landing-wcag-textsize-secondary {display: none;}
  .landing-navbar-wrapper {right: 20px;}
  .margintop-landing-navbar {margin-top: 26px;}
  .landing-bottom-left {display: none;}
  .landing-bottom-center {display: none;}

  // BESTILLE TIME KNAPP ANIMASJON
  .landing-bottom-right {
    position: relative;
    bottom: inherit;
    right: inherit;
    text-align: center;
    width: 70%;
    left: 50%;
    -webkit-transform: translate(-50%,0);
    -moz-transform: translate(-50%,0);
    -ms-transform: translate(-50%,0);
    -o-transform: translate(-50%,0);
    transform: translate(-50%,0);
    padding: 20px 0px;
    margin: -160px 0px 0px 0px;
    color: @white-color;
    background: @secondary-color;
  }

  .landing-bottom-right:hover {
    position: relative;
    bottom: 0px;
    right: -50%;
    text-align: center;
    width: 70%;
    left: 50%;
    -webkit-transform: translate(-50%, 0px);
       -moz-transform: translate(-50%, 0px);
        -ms-transform: translate(-50%, 0px);
         -o-transform: translate(-50%, 0px);
            transform: translate(-50%, 0px);
      color: @white-color;
      background: @secondary-color;
      font-size: 21px;
      padding: 20px 0px;
      box-shadow: inherit;
      //margin: 0px;
  }

  .landing-bottom-right:active {
    position: relative;
    bottom: 0px;
    right: -50%;
    text-align: center;
    width: 70%;
    left: 50%;
    -webkit-transform: translate(-50%, 0px);
       -moz-transform: translate(-50%, 0px);
        -ms-transform: translate(-50%, 0px);
         -o-transform: translate(-50%, 0px);
            transform: translate(-50%, 0px);
    -webkit-transition: 50ms ease-in-out;
            transition: 50ms ease-in-out;
      color: @white-color;
      background: @secondary-color;
      font-size: 21px;
      padding: 20px 0px;
      box-shadow: inherit;
  }
  // =======================

  .margin-container {margin:0px 15px 0px 15px;}

  .margintop-landing-intro {margin-top: 30vh;}
  .landing-intro-title {font-size: 35px; margin-left: -23px;}
  .landing-intro-text {font-size: 13pt; margin-left: 3%;}
  .landing-intro-text-2 {margin-top: 40px;}
  .landing-intro-text-2, .landing-intro-text-3 {font-size: 16pt; margin-left: 3%;}

  // BESTILLE TIME KNAPP SKJEMA
  .landing-popup-order-container {
    width: 93%;
    height: 93%;
    padding: 60px 30px;
  }

  .landing-popup-order-close_btn {
    right: 2%;
    top: 6%;

    svg{
      width: 20px;
      height: 20px;
    }

    svg:hover {
      width: 20px;
      height: 20px;
      right: auto!important;
      top: auto!important;
      cursor: pointer;
    }

    svg:hover line, svg:active line {
      stroke: @secondary-color;
    }

    svg:active {
      width: 20px;
      height: 20px;
      cursor: pointer;
    }
  }

  .landing-popup-order-title {
    font-size: 20px;
  }

  .landing-popup-order-text {
    font-size: 16px;
    line-height: 22px;
  }
  // =======================


}


// =====================================================================

@media only screen and (max-width: 360px) {

  // BESTILLE TIME KNAPP SKJEMA
  .landing-popup-order-container {
    width: 93%;
    height: 93%;
    padding: 40px 30px;
  }

  .landing-popup-order-close_btn {
    right: 2%;
    top: 6%;

    svg{
      width: 20px;
      height: 20px;
    }

    svg:hover {
      width: 20px;
      height: 20px;
      right: auto!important;
      top: auto!important;
      cursor: pointer;
    }

    svg:hover line, svg:active line {
      stroke: @secondary-color;
    }

    svg:active {
      width: 20px;
      height: 20px;
      cursor: pointer;
    }
  }

  .landing-popup-order-title {
    font-size: 20px;
  }

  .landing-popup-order-text {
    font-size: 14px;
    line-height: 19px;
  }
  // =======================
}

